--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 
 /* 게시판 */
-.notice1 {}
+.notice1 {position: relative;}
 .notice1 h5 {font-size: 15px; color: #2f7fa6; padding-bottom: 5px;}
 .notice1 li {position:relative; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; padding-left: 8px;}
 .notice1 li::before {
@@ -191,6 +191,13 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     border-radius: 50%;
     background: #449ce2;
     position: absolute; left: 0; top: 6px;
+}
+
+.notice1 .more {
+    position: absolute; right: 0; top: 3px;
+    color: #878787;
+    text-transform: uppercase;
+
 }
 
 /* media query*/
