--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 }
 
 
-/* 게시판 */
+/* 게시판1 */
 .notice1 {position: relative;}
 .notice1 h5 {font-size: 15px; color: #2f7fa6; padding-bottom: 5px;}
 .notice1 li {position:relative; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; padding-left: 8px;}
@@ -197,7 +197,44 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     position: absolute; right: 0; top: 3px;
     color: #878787;
     text-transform: uppercase;
+}
 
+/* 게시판2 */
+.notice2 {position: relative;}
+.notice2 h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 5px;}
+.notice2 li {
+    position: relative;
+    overflow: hidden; text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp:2;
+    padding-left: 8px;
+    padding-bottom: 5px;
+    max-height: 40px; /* ie */
+}
+.notice2 li:before {
+    content: '';
+    width: 3px; height: 3px;
+    border-radius: 50%;
+    background: #449ce2;
+    position: absolute; left: 0; top: 6px;
+}
+.notice2 .more {
+    position: absolute; right: 0; top: 3px;
+    color: #878787;
+    text-transform: uppercase;
+    font-size: 10px;
+}
+
+/* 블로그1 */
+.blog1 img {width: 100%;}
+.blog1 .img-retina {display: none;}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+        only screen and (min-device-pixel-ratio: 1.5),
+        only screen and (min-resolution: 1.5dppx) {
+        .blog1 .img-retina {display: initial;}
+        .blog1 .img-normal {display: none;}
 }
 
 /* media query*/
